--- a/Challenge04LGBB/View/pt-BR.lproj/Main.strings
+++ b/Challenge04LGBB/View/pt-BR.lproj/Main.strings
@@ -1,12 +1,12 @@
 
 /* Class = "UILabel"; text = "Dos dois tipos de polvilho, o doce é mais recomendável dependendo do manuseio."; ObjectID = "0aP-jH-D7M"; */
-"0aP-jH-D7M.text" = "Of the two types of sprinkles, the sweet is more recommended depending on the handling.";
+"0aP-jH-D7M.text" = "Dos dois tipos de polvilho, o doce é mais recomendável dependendo do manuseio.";
 
 /* Class = "UILabel"; text = "Preparo da receita"; ObjectID = "2hl-Tx-UpE"; */
-"2hl-Tx-UpE.text" = "Recipe Preparation";
+"2hl-Tx-UpE.text" = "Preparo da receita";
 
 /* Class = "UILabel"; text = "Siga a seguinte instrução:"; ObjectID = "6V8-Vs-nYI"; */
-"6V8-Vs-nYI.text" = "Follow the instructions below";
+"6V8-Vs-nYI.text" = "Siga a seguinte instrução:";
 
 /* Class = "UINavigationItem"; title = "Title"; ObjectID = "CCX-UK-0q2"; */
 "CCX-UK-0q2.title" = "Title";
@@ -15,13 +15,13 @@
 "czN-bv-CPP.text" = "Em uma vasilha, junte os secos: polvinho doce e o parmesão";
 
 /* Class = "UILabel"; text = "Adulto"; ObjectID = "f6u-Eg-cEd"; */
-"f6u-Eg-cEd.text" = "Adult";
+"f6u-Eg-cEd.text" = "Adulto";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "pne-fb-yWh"; */
 "pne-fb-yWh.normalTitle" = "Button";
 
 /* Class = "UIButton"; configuration.title = "É hora de comer!"; ObjectID = "qhd-gs-qhb"; */
-"qhd-gs-qhb.configuration.title" = "It is time to eat!";
+"qhd-gs-qhb.configuration.title" = "É hora de comer!";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "qhd-gs-qhb"; */
 "qhd-gs-qhb.normalTitle" = "Button";
@@ -30,4 +30,4 @@
 "wY7-zh-pSu.normalTitle" = "Button";
 
 /* Class = "UILabel"; text = "TURNOS"; ObjectID = "woD-OK-cUV"; */
-"woD-OK-cUV.text" = "SHIFTS";
+"woD-OK-cUV.text" = "TURNOS";
