--- a/Challenge04LGBB/View/pt-BR.lproj/ListRecipesScreen.strings
+++ b/Challenge04LGBB/View/pt-BR.lproj/ListRecipesScreen.strings
@@ -6,7 +6,7 @@
 "Axs-N1-jAw.text" = "Receitas em destaque";
 
 /* Class = "UILabel"; text = "Por Isabelle Colares"; ObjectID = "FDW-Ne-LYO"; */
-"FDW-Ne-LYO.text" = "Por Isabelle Colares";
+"FDW-Ne-LYO.text" = "Por Time Mealmories";
 
 /* Class = "UILabel"; text = "Mealmories!"; ObjectID = "NvP-H6-gWn"; */
 "NvP-H6-gWn.text" = "Mealmories!";
@@ -36,7 +36,7 @@
 "nI6-0I-Opg.text" = "Label";
 
 /* Class = "UILabel"; text = "Por Isabelle Colares"; ObjectID = "tSv-BZ-xJR"; */
-"tSv-BZ-xJR.text" = "Por Isabelle Colares";
+"tSv-BZ-xJR.text" = "Por Time Mealmories";
 
 /* Class = "UILabel"; text = "Pão de Queijo"; ObjectID = "zbM-FJ-dRC"; */
 "zbM-FJ-dRC.text" = "Pão de Queijo";
