chore: Changed app permission texts

--- a/Challenge04LGBB/Localização/en.lproj/Localizable.strings
+++ b/Challenge04LGBB/Localização/en.lproj/Localizable.strings
@@ -6,6 +6,9 @@
   
 */
 
+"Foto Salva!" = "Photo Saved";
+"A sua foto foi salva em sua galeria com sucesso!." = "Your photo has been saved to your gallery successfully!.";
+
 //Titulo-Receitas
 "Pão de Queijo" = "Cheese Bread";
 "Pipoca" = "Popcorn";
