--- a/Challenge04LGBB/Localização/he.lproj/Localizable.strings
+++ b/Challenge04LGBB/Localização/he.lproj/Localizable.strings
@@ -6,6 +6,9 @@
   
 */
 
+"Foto Salva!" = "התמונה נשמרה";
+"A sua foto foi salva em sua galeria com sucesso!." = "התמונה שלך נשמרה בגלריה שלך בהצלחה!.";
+
 //Titulo-Receitas
 "Pão de Queijo" = "לחם גבינה";
 "Pipoca" = "פופקורן";
