chore:Finish Translation

--- a/Challenge04LGBB/View/he.lproj/OnBoard.strings
+++ b/Challenge04LGBB/View/he.lproj/OnBoard.strings
@@ -3,34 +3,34 @@
 "5zI-VN-YCF.normalTitle" = "Button";
 
 /* Class = "UILabel"; text = "Registre Mealmories"; ObjectID = "9dn-Lc-v1A"; */
-"9dn-Lc-v1A.text" = "Registre Mealmories";
+"9dn-Lc-v1A.text" = " Mealmories תקליט";
 
 /* Class = "UILabel"; text = "Cozinhe e se divirta"; ObjectID = "R58-Ko-UWX"; */
-"R58-Ko-UWX.text" = "Cozinhe e se divirta";
+"R58-Ko-UWX.text" = "בואו נהנה ונבשל";
 
 /* Class = "UILabel"; text = "Capture momentos mais inesperados ou divertidos sem sair do App!"; ObjectID = "WlC-63-IfU"; */
-"WlC-63-IfU.text" = "Capture momentos mais inesperados ou divertidos sem sair do App!";
+"WlC-63-IfU.text" = "ללכוד את הרגעים הכי לא צפויים או מהנים מבלי לצאת מהאפליקציה!";
 
 /* Class = "UIButton"; configuration.title = "Pular"; ObjectID = "XkB-W7-dVI"; */
-"XkB-W7-dVI.configuration.title" = "Pular";
+"XkB-W7-dVI.configuration.title" = "קְפִיצָה";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "XkB-W7-dVI"; */
 "XkB-W7-dVI.normalTitle" = "Button";
 
 /* Class = "UIButton"; configuration.title = "Pular"; ObjectID = "Zm7-fv-9vI"; */
-"Zm7-fv-9vI.configuration.title" = "Pular";
+"Zm7-fv-9vI.configuration.title" = "קְפִיצָה";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "Zm7-fv-9vI"; */
 "Zm7-fv-9vI.normalTitle" = "Button";
 
 /* Class = "UILabel"; text = "Estimule cooperação na cozinha por meio de turnos e instruções."; ObjectID = "cKc-AG-6bd"; */
-"cKc-AG-6bd.text" = "Estimule cooperação na cozinha por meio de turnos e instruções.";
+"cKc-AG-6bd.text" = "עודדו שיתוף פעולה במטבח באמצעות תורות והנחיות.";
 
 /* Class = "UILabel"; text = "Encontre sua receita"; ObjectID = "n0M-L3-5bz"; */
-"n0M-L3-5bz.text" = "Encontre sua receita";
+"n0M-L3-5bz.text" = "מצא את המתכון שלך";
 
 /* Class = "UIButton"; configuration.title = "Vamos Começar!"; ObjectID = "tg7-T8-k4e"; */
-"tg7-T8-k4e.configuration.title" = "Vamos Começar!";
+"tg7-T8-k4e.configuration.title" = "בואו נתחיל!";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "tg7-T8-k4e"; */
 "tg7-T8-k4e.normalTitle" = "Button";
@@ -39,4 +39,4 @@
 "uJa-y1-qj5.normalTitle" = "Button";
 
 /* Class = "UILabel"; text = "Você encontra a receita mais apropriada para fazer pela duração, nível e faixa etária infantil!"; ObjectID = "vHU-it-w2l"; */
-"vHU-it-w2l.text" = "Você encontra a receita mais apropriada para fazer pela duração, nível e faixa etária infantil!";
+"vHU-it-w2l.text" = "תמצאו מתכון מתאים לפי משך, רמה וקבוצת גיל של הילד!";
