--- a/Challenge04LGBB/Localização/en.lproj/Localizable.strings
+++ b/Challenge04LGBB/Localização/en.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 "Foto Salva!" = "Photo Saved";
 "A sua foto foi salva em sua galeria com sucesso!." = "Your photo has been saved to your gallery successfully!.";
+"Falha ao salvar foto" = "Failed to save photo";
 
 //Titulo-Receitas
 "Pão de Queijo" = "Cheese Bread";
