--- a/Challenge04LGBB/Localização/he.lproj/Localizable.strings
+++ b/Challenge04LGBB/Localização/he.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 "Foto Salva!" = "התמונה נשמרה";
 "A sua foto foi salva em sua galeria com sucesso!." = "התמונה שלך נשמרה בגלריה שלך בהצלחה!.";
-
+;"שמירת התמונה נכשלה" = "Falha ao salvar foto"
 //Titulo-Receitas
 "Pão de Queijo" = "לחם גבינה";
 "Pipoca" = "פופקורן";
