chore:Add translations to notifications,fixe template screen orientation

--- a/Challenge04LGBB/Localização/en.lproj/Localizable.strings
+++ b/Challenge04LGBB/Localização/en.lproj/Localizable.strings
@@ -5,7 +5,19 @@
   Created by Luciano Uchoa on 09/09/22.
   
 */
+//Notificações
 
+
+"Quais seus planos pra noite?" = "Plans for tonight?";
+"Faça uma receita deliciosa em conjunto para criar mais Mealmories." = "Let’s cook a delicious recipe together to create more Mealmories.";
+"Que tal um café da manhã delicioso?" = "What about a delicious breakfast?";
+"Com panquecas coloridas o tudo fica mais divertido! " = "With Coloured Pancakes everything is more fun!";
+"Lanche da tarde rápido" = " Quick snack?";
+"Uma pipoca? Mini Gelatinas? Brigadeiro? Há vários jeitos de se divertir." = "Popcorn? Mini jelly? Brigadeiro? There are several ways to have fun today.";
+"Crie Mealmories para suas manhãs!" = "Create Mealmories this morning!";
+"Faça várias receitas e combine possibilidades pra ter uma refeição única." = "Make several recipes and combine possibilites for a unique meal.";
+"Que tal um filme e bastante comida?" = "What about a movie and plenty of food?";
+"Venha fazer as receitas mais gostosas e divertidas com quem ama, combine todas e faça um grande lanche! " = "Let’s Cook more delicious and fun recipes with the ones your love, get together and cook a big snack!";
 //Geral
 
 "Ajustes" = "Settings";
